# librime-python

./: .clang-format  .gitignore  README.md
archlinux/: PKGBUILD
cpp/: CMakeLists.txt
cpp/src/: module.cc  python_filter.cc  python_filter.h  python_simple_filter.cc  python_simple_filter.h  python_simple_translator.cc  python_simple_translator.h  python_translator.cc  python_translator.h
examples/: charset.simple_filter.py  complex.filter.py  datetime.simple_translator.py  putonghua_cloud_input.translator.py
python/: setup.py
python/src/rimeext/: Filter.py  Translator.py  __init__.py
